Fixing pictogram alignment

--- a/site/components/framework/design/decorations/pictogram/__icon/pictogram__icon.scss
+++ b/site/components/framework/design/decorations/pictogram/__icon/pictogram__icon.scss
@@ -1,4 +1,6 @@
 @mixin pictogram__icon($width) {
+  display: flex;
+  
   .icon {
     @include icon($width);
   }
