--- a/site/components/project/templates/default/--desktop/default--desktop.scss
+++ b/site/components/project/templates/default/--desktop/default--desktop.scss
@@ -1,5 +1,5 @@
 @mixin default--desktop {
   @include desktop {
-    @include fixed-width(80vw);
+    @include fixed-width(75vw);
   }
 }
