--- a/site/components/project/tickets/--style/tickets--style.scss
+++ b/site/components/project/tickets/--style/tickets--style.scss
@@ -28,7 +28,7 @@
 
   .head {
     .pictogram {
-      @include pictogram($width / 2);
+      @include pictogram($width / 2, centered);
     }
   }
 
